<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomtab_height"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
		<!-- 54 -->
        <RelativeLayout
            android:id="@+id/ib_training_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="2dp" >

            <ImageView
                android:id="@+id/ib_training_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_lesson" />

            <TextView
                android:id="@+id/ib_training_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ib_training_img"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_hrnews"
                android:textColor="#666666"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ib_mytraining_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="2dp" >

            <ImageView
                android:id="@+id/ib_mytraining_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_saled_selector" />

            <TextView
                android:id="@+id/ib_mytraining_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ib_mytraining_img"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_salary"
                android:textColor="#666666"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ib_me_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="2dp" ><!-- 3 -->

            <ImageView
                android:id="@+id/ib_me_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_user_selector" /><!-- 28 -->

            <TextView
                android:id="@+id/ib_me_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ib_me_img"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_set"
                android:textColor="#666666"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_temp"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@id/main_bottom"
        android:background="#f2f8ff" /><!--"#d6d6d6"  -->

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_temp"
         />

</RelativeLayout>